Add a nginx.rb file for nginx web server;Add some task for generate template for nginx config and vlad deploy.rb..

--- a/conf/nginx.template.erb
+++ b/conf/nginx.template.erb
@@ -1,3 +1,10 @@
+# 
+# Author:IceskYsl@1sters!
+# Blog:http://iceskysl.1sters.com
+# Email:Iceskysl@gmail.com
+# Date:2008.05.24
+#This is a Telmlate for nginx config file..
+
 # File generated on <%=Time.now().strftime("%d %b %y")%>
 
 #upstream name has to be unique so add on the port number
